[package]
name = "validation_derive_test"
version = "0.1.0"
authors = ["Joseph.Orme <joseph.orme@asurion.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.117"
serde_derive = "1.0.118"

[dependencies.validation]
path = "../validation"

[dependencies.validation_derive]
path = "../validation_derive"
